# novel_updates_scraper

./: Book.py  README.md  Search.py  cf_bypass.py  genre_constants.py  get_tags.py  pyproject.toml  query_constants.py  requirements.txt  scraper.py  tag_constants.py
src/novel_updates_scraper/: Book.py  Search.py  cf_bypass.py  constants.py  get_genres.py  get_tags.py  scraper.py  tag_constants.py  utils.py
src/novel_updates_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
