[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "novel_updates_scraper"
version = "0.1.4"
authors = [
  { name="Woody Aung", email="woodyaung2005@gmail.com" },
]
description = "An API to query the novel updates website "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies=[
  "requests",
  "beautifulsoup4",
  "nodriver",
  "curl_cffi"
]

[project.urls]
Homepage = "https://github.com/woodyistaken/novel_updates_scraper"
Issues = "https://github.com/pypa/sampleproject/issues"